Fix handheld footer titles alignment when using custom render method

--- a/packages/components/src/DataTable/Footer.css
+++ b/packages/components/src/DataTable/Footer.css
@@ -9,9 +9,14 @@
   font-weight: bold;
 }
 
+.mobileFooterRow * {
+  text-align: start;
+}
+
 .mobileFooterRowData,
 .mobileFooterRowData * {
   font-weight: normal;
+  text-align: end;
 }
 
 .mobileFooterRow:not(:last-child) {
